# verify-nfts-solana

./: Anchor.toml
programs/verify-nfts-anchor/: Cargo.toml
programs/verify-nfts-anchor/src/: lib.rs
tests/: verify-nfts-anchor.ts
